--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'com.google.firebase:firebase-database:9.2.1'
+    compile 'com.firebaseui:firebase-ui-database:0.4.1'
     annotationProcessor 'org.parceler:parceler:1.1.6'
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.0'
